# mlops

./: .dockerignore  .gitignore  README_windows.md  app.yaml  app_docker_build.sh  apply_k8s.sh  backend.Dockerfile  base.backend.Dockerfile  docker-registry.yaml  harbor-pv.yaml  harbor-values.yaml  minio.yaml  openssl.cnf  pyproject.toml  readme.md  storage-class.yaml
app/: main.py  s3_client.py
docs/: harbor-guide.md  https-guide.md
