[tool.poetry]
name = "mlops"
version = "0.0.1"
description = "this is jerry's personal mlops system."
authors = ["jerry"]
package-mode = false  # 패키지 모드 비활성화

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.1,<0.35.0"
transformers = ">=4.51.3,<5.0.0"
torch = ">=2.6.0,<3.0.0"
boto3 = ">=1.37.34,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"