[project]
name = "mlops"
version = "0.0.1"
description = "this is jerry's personal mlops system."
authors = [
    { name = "Jerry", email = "ghkdwp018@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.12, <0.116.0",
    "uvicorn>=0.34.1, <0.35.0",
    "transformers>=4.51.3, <5.0.0",
    "torch>=2.6.0, <3.0.0",
    "boto3>=1.37.34, <2.0.0",
]
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
package-mode = false

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlops"]